# strata

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  EXECUTION_PLAN.md  LICENSE  Makefile  PLATFORM_REVIEW.md  README.md  SPECIFICATION.md  TODO.md  bursty_fix_plan.md  claude_transcript.md  code_quality_report.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  findings-report.md  gemini-research-response.md  hot.md  index.md  latest_plans.md  log.md  new_crate_structure.md  new_plans.md  package.json  proposal.md  real-world-snags.md  review_findings.md  review_plan.md
.cargo/: audit.toml  config.toml
.devcontainer/: Dockerfile  README.md  devcontainer-lock.json  devcontainer.json  post-create.sh  post-start.sh
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
crates/gst-rist-bonding/: Cargo.toml  bandwidth_tracking_step_samples.jsonl  build.rs
crates/gst-rist-bonding/src/: lib.rs  pad.rs  sink.rs  src.rs  util.rs
crates/gst-rist-bonding/tests/: end_to_end.rs  impaired_e2e.rs  robustness.rs  stats_accuracy.rs  video_output.rs
crates/rist-bonding-core/: Cargo.toml
crates/rist-bonding-core/src/: config.rs  lib.rs  runtime.rs  stats.rs
crates/rist-bonding-core/src/net/: interface.rs  link.rs  mod.rs  signal.rs  state.rs  util.rs  wrapper.rs  zerocopy.rs
crates/rist-bonding-core/src/protocol/: header.rs  mod.rs
crates/rist-bonding-core/src/receiver/: aggregator.rs  bonding.rs  mod.rs
crates/rist-bonding-core/src/scheduler/: bonding.rs  dwrr.rs  ewma.rs  fec.rs  mod.rs  sbd.rs  wrr.rs
crates/strata-agent/: Cargo.toml
crates/strata-agent/src/: control.rs  hardware.rs  main.rs  metrics.rs  pipeline.rs  portal.rs  telemetry.rs  util.rs
crates/strata-bonding/: Cargo.toml
crates/strata-bonding/benches/: scheduler_hotpath.rs
crates/strata-bonding/src/: adaptation.rs  config.rs  lib.rs  metrics.rs  runtime.rs  signal.rs  stats.rs
crates/strata-bonding/src/media/: mod.rs  nal.rs  priority.rs
crates/strata-bonding/src/modem/: band.rs  health.rs  mod.rs  supervisor.rs
crates/strata-bonding/src/net/: interface.rs  mod.rs  state.rs  transport.rs  zerocopy.rs
crates/strata-bonding/src/protocol/: header.rs
crates/strata-bonding/src/receiver/: aggregator.rs  mod.rs  transport.rs
crates/strata-bonding/src/scheduler/: blest.rs  bonding.rs  dwrr.rs  edpf.rs  ewma.rs  fec.rs  iods.rs  kalman.rs  mod.rs  oracle.rs  sbd.rs  thompson.rs
crates/strata-bonding/tests/: cloud_receiver.rs  dynamic_jitter_buffer.rs  high_latency_gap.rs  intelligence_gaps.rs  intelligence_pipeline.rs  metrics_endpoint.rs  multi_link_bonding.rs  signal_shutdown.rs  transport_pipeline.rs
crates/strata-common/: Cargo.toml
crates/strata-common/src/: auth.rs  identity.rs  ids.rs  lib.rs  metrics.rs  models.rs  protocol.rs
crates/strata-control/: Cargo.toml
crates/strata-control/migrations/: 001_initial.sql  002_receivers.sql  003_device_identity.sql  004_stream_end_detail.sql
crates/strata-control/src/: db.rs  lib.rs  main.rs  state.rs  stream_state.rs  ws_agent.rs  ws_dashboard.rs  ws_receiver.rs
crates/strata-control/src/api/: auth.rs  auth_extractor.rs  destinations.rs  metrics.rs  mod.rs  receivers.rs  senders.rs  streams.rs
crates/strata-control/tests/: api_integration.rs
crates/strata-dashboard/: Cargo.toml  index.html
crates/strata-dashboard/src/: api.rs  lib.rs  types.rs  ws.rs
crates/strata-dashboard/src/pages/: destinations.rs  login.rs  mod.rs  receivers.rs  sender_detail.rs  senders.rs  streams.rs
crates/strata-dashboard/src/pages/sender_detail/: cards.rs  helpers.rs  tabs.rs
crates/strata-dashboard/style/: input.css  main.css
crates/strata-gst/: Cargo.toml  build.rs
crates/strata-gst/src/: codec.rs  hls_upload.rs  lib.rs  pad.rs  sink.rs  src.rs  ts_keyframe.rs  util.rs
crates/strata-gst/tests/: end_to_end.rs  impaired_e2e.rs  robustness.rs  stats_accuracy.rs  video_output.rs
crates/strata-portal/: Cargo.toml  Trunk.toml  index.html  package.json
crates/strata-portal/src/: api.rs  lib.rs  types.rs
crates/strata-portal/style/: input.css  main.css
crates/strata-protocol/: Cargo.toml
crates/strata-protocol/src/: api.rs  envelope.rs  lib.rs  messages.rs  models.rs  payloads.rs  profiles.rs
crates/strata-receiver/: Cargo.toml
crates/strata-receiver/src/: control.rs  main.rs  metrics.rs  pipeline.rs  pipeline_monitor.rs  telemetry.rs
crates/strata-receiver/tests/: daemon_lifecycle.rs
crates/strata-sim/: Cargo.toml
crates/strata-sim/src/: bonding_scenarios.rs  impairment.rs  lib.rs  scenario.rs  test_util.rs  topology.rs
crates/strata-sim/tests/: three_link_convergence.rs  tier3_netem.rs
crates/strata-transport/: Cargo.toml
crates/strata-transport/benches/: packet_latency.rs  transport_hotpath.rs
crates/strata-transport/examples/: rlnc_debug.rs
crates/strata-transport/fuzz/: Cargo.toml
crates/strata-transport/fuzz/fuzz_targets/: fuzz_control.rs  fuzz_packet_decode.rs  fuzz_receiver.rs  fuzz_varint.rs  fuzz_wire_parser.rs
crates/strata-transport/proptest-regressions/: codec.txt
crates/strata-transport/src/: arq.rs  codec.rs  congestion.rs  lib.rs  pool.rs  receiver.rs  rlnc.rs  rtcp.rs  rtp.rs  sender.rs  session.rs  socket.rs  stats.rs  wire.rs
crates/strata-transport/tests/: integration.rs  proptest_fec.proptest-regressions  proptest_fec.rs  proptest_rlnc.rs  proptest_wire.proptest-regressions  proptest_wire.rs
dev/: Dockerfile.agent  Dockerfile.control  Dockerfile.web-dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint-sender.sh  fast-reload.sh
docker/: Dockerfile.cross-aarch64
docs/: FOCUS_PLAN_ARCHIVED.md  GAME_PLAN.md  MASTER_PLAN.md  RFC_IMPROVEMENT_PROPOSALS.md  ROBUSTNESS_PLAN_ARCHIVED.md  bandwidth-adaptation-design.md  cellular-video-validation-plan.md  config_migration.md  gemini-cutting-edge-research.md  issue_report.md  ops_playbook.md  packet-flow.md  perf_budgets.md  privileges.md  production_plan.md  regression_thresholds.md  reply-chatgpt.md  reply-gemini.md  (+5 more)
(+80 files in other folders)
