[workspace]
resolver = "2"
members = [
    "crates/librist-sys",
    "crates/rist-bonding-core",
    "crates/gst-rist-bonding",
    "crates/rist-network-sim",
]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
bytes = "1.5"
once_cell = "1.19"
gst = { package = "gstreamer", version = "0.22" }
gst-base = { package = "gstreamer-base", version = "0.22" }
gst-app = { package = "gstreamer-app", version = "0.22" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"

# Optimization profiles
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[workspace.metadata.release]
tag-name = "v{{version}}"
publish = false
push = true
allow-branch = ["main"]
