[workspace]
resolver = "2"
members = [
    "crates/librist-sys",
    "crates/rist-bonding-core",
    "crates/gst-rist-bonding",
    "crates/rist-network-sim",
    "crates/strata-common",
    "crates/strata-control",
    "crates/strata-agent",
    "crates/strata-dashboard",
    "crates/strata-portal",
]

[workspace.dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
anyhow = "1.0.101"
crossbeam-channel = "0.5.15"
bytes = "1.11.1"
once_cell = "1.21.3"
arc-swap = "1.7"
compact_str = "0.8"
rtrb = "0.3"
raptorq = "2.0"
gst = { package = "gstreamer", version = "0.24.4" }
gst-base = { package = "gstreamer-base", version = "0.24.4" }
gst-app = { package = "gstreamer-app", version = "0.24.4" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
rand = "0.10.0"

# Optimization profiles
[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[workspace.metadata.release]
tag-name = "v{{version}}"
publish = false
push = true
allow-branch = ["main"]
