[package]
name = "gst-rist-bonding"
version = "0.1.0"
edition = "2021"

[dependencies]
gst = { workspace = true }
gst-base = { workspace = true }
gst-app = { workspace = true }
rist-bonding-core = { path = "../rist-bonding-core" }
tracing = { workspace = true }
once_cell = { workspace = true }
bytes.workspace = true
ctrlc = "3.5.1"
serde.workspace = true
serde_json.workspace = true
flume = "0.12.0"

[lib]
name = "gstristbonding"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dev-dependencies]
plotters = "0.3.7"
rist-network-sim = { path = "../rist-network-sim" }
