[package]
name = "gst-rist-bonding"
version = "0.2.1"
edition = "2021"

[dependencies]
gst = { workspace = true }
gst-base = { workspace = true }
gst-app = { workspace = true }
rist-bonding-core = { path = "../rist-bonding-core" }
tracing = { workspace = true }
once_cell = { workspace = true }
bytes.workspace = true
crossbeam-channel = { workspace = true }
ctrlc = "3.5.1"
serde.workspace = true
serde_json.workspace = true

[lib]
name = "gstristbonding"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "integration_node"
path = "src/bin/integration_node.rs"

[dev-dependencies]
plotters = "0.3.7"
rist-network-sim = { path = "../rist-network-sim" }
