[package]
name = "rist-bonding-core"
version = "0.1.2"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
bytes = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
librist-sys = { path = "../librist-sys" }
libc = "0.2.181"
arc-swap = { workspace = true }
compact_str = { workspace = true }
rtrb = { workspace = true }
raptorq = { workspace = true }

[dev-dependencies]
