[package]
name = "strata-bonding"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "strata-receiver"
path = "src/bin/strata_receiver.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
bytes = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
strata-transport = { path = "../strata-transport" }
libc = "0.2"
rtrb = { workspace = true }
quanta = { workspace = true }
quinn-udp = { workspace = true }
raptorq = { workspace = true }
rand = { workspace = true }
ctrlc = "3.5.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scheduler_hotpath"
harness = false
