[package]
name = "strata-bonding"
version = "0.1.2"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
bytes = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
strata-transport = { path = "../strata-transport" }
libc = "0.2.181"
arc-swap = { workspace = true }
compact_str = { workspace = true }
rtrb = { workspace = true }
raptorq = { workspace = true }
quanta = { workspace = true }
rand = { workspace = true }
quinn-udp = "0.5.14"
monoio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"

[dev-dependencies]
