[package]
name = "strata-control"
version = "0.1.1"
edition = "2024"
description = "Strata control plane — REST API, agent WebSocket, dashboard, receiver spawner"
publish = false

[[bin]]
name = "strata-control"
path = "src/main.rs"

[lib]
name = "strata_control"
path = "src/lib.rs"

[dependencies]
strata-common = { path = "../strata-common" }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "fs",
    "set-header",
] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.21", features = ["v7"] }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# Misc
dashmap = "6"
futures = "0.3"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
