[package]
name = "strata-dashboard"
version = "0.1.1"
edition = "2021"
description = "Strata platform dashboard — Leptos CSR WASM app"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"

# HTTP client
gloo-net = { version = "0.6", features = ["json"] }
gloo-storage = "0.3"

# WebSocket
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "HtmlInputElement",
    "Window",
    "console",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"

# Serialization (shared types)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
