[package]
name = "strata-gst"
version = "0.5.0"
edition = "2021"
description = "GStreamer plugin for Strata bonded transport"
repository = "https://github.com/RephlexZero/strata"

[dependencies]
gst = { workspace = true }
gst-base = { workspace = true }
gst-app = { workspace = true }
strata-bonding = { path = "../strata-bonding" }
strata-common = { path = "../strata-common" }
tracing = { workspace = true }
once_cell = { workspace = true }
bytes.workspace = true
crossbeam-channel = { workspace = true }
arc-swap.workspace = true
ctrlc = "3.5.1"
serde.workspace = true
serde_json.workspace = true

[lib]
name = "gststrata"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "strata-node"
path = "src/bin/strata_node.rs"
