[package]
name = "strata-gst"
version = "0.5.0"
edition = "2021"
description = "GStreamer plugin for Strata bonded transport"
repository = "https://github.com/RephlexZero/strata"

[dependencies]
gst = { workspace = true }
gst-base = { workspace = true }
gst-app = { workspace = true }
strata-bonding = { path = "../strata-bonding" }
bytes.workspace = true
ctrlc = "3.5.2"
serde_json.workspace = true
toml = { workspace = true }

[lib]
name = "gststrata"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "strata-node"
path = "src/bin/strata_node.rs"

[dev-dependencies]
plotters = "0.3.7"
strata-sim = { path = "../strata-sim" }
serde_json = { workspace = true }
