[package]
name = "strata-gst"
version = "0.6.0"
edition = "2024"
description = "GStreamer plugin for Strata bonded transport"
repository = "https://github.com/RephlexZero/strata"

[dependencies]
gst = { workspace = true }
gst-base = { workspace = true }
gst-app = { workspace = true }
strata-bonding = { path = "../strata-bonding" }
strata-common = { path = "../strata-common" }
strata-protocol = { path = "../strata-protocol" }
tracing = { workspace = true }
once_cell = { workspace = true }
bytes.workspace = true
crossbeam-channel = { workspace = true }
arc-swap.workspace = true
ctrlc = "3.5.1"
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ureq = "3"
gst-plugin-hlssink3 = "0.15.3"

[lib]
name = "gststrata"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "strata-pipeline"
path = "src/bin/strata_pipeline/main.rs"
