[package]
name = "strata-portal"
version = "0.1.0"
edition = "2021"
description = "Strata sender portal — Leptos CSR WASM app for field device management"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }

# HTTP client
gloo-net = { version = "0.6", features = ["json"] }
gloo-timers = { version = "0.3", features = ["futures"] }

# WASM bindings
web-sys = { version = "0.3", features = ["console", "HtmlInputElement"] }
wasm-bindgen = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
