[package]
name = "strata-protocol"
version = "0.6.0"
edition = "2024"
description = "Single source of truth for the Strata platform wire protocol — envelope, WebSocket messages, REST API types, data models. Wasm-safe (serde types only)."
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.21", features = ["v7", "serde"] }

# The dashboard (Leptos CSR) compiles this crate for wasm32-unknown-unknown:
# uuid's RNG and chrono's clock need their JS backends there.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.21", features = ["v7", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
