[package]
name = "strata-receiver"
version = "0.2.0"
edition = "2024"
description = "Strata receiver daemon — cloud server daemon with WSS control, capacity registration, pipeline management"
publish = false

[[bin]]
name = "strata-receiver"
path = "src/main.rs"

[dependencies]
strata-common = { path = "../strata-common" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Web (metrics server)
axum = "0.8"

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# System info
sysinfo = "0.35"

# Unix signal
libc = "0.2"
