[package]
name = "strata-transport"
version = "0.2.1"
edition = "2024"
description = "Strata pure-Rust transport protocol — custom wire format, hybrid FEC+ARQ, Biscay CC"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bytes = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
slab = "0.4"
quanta = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
proptest = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "packet_latency"
harness = false
